--- a/styles/pdtl.module.css
+++ b/styles/pdtl.module.css
@@ -211,15 +211,17 @@
   font-weight: 500;
   text-align: justify;
   margin-bottom: 3vw;
+  font-family: 'Ageo';
 }
 
 .paraTop h5 {
   font-size: 1.3vw;
   line-height: 1.5;
   margin-bottom: 3vw;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0.5px;
   text-align: justify;
+  font-family: 'Ageo';
 }
 
 .clientTestimonialSectionContent{
@@ -245,6 +247,7 @@
   font-weight: 500;
   text-align: justify;
   margin-bottom: 3vw;
+  font-family: 'Ageo';
 }
 .clientTestimonialSpan{
   color: #6f6f6f;
