--- a/styles/certvault.module.css
+++ b/styles/certvault.module.css
@@ -139,7 +139,7 @@
 
 .thirdSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
 }
@@ -192,7 +192,7 @@
 
 .forthSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
   padding-top: 8vw;
@@ -223,6 +223,7 @@
   margin-bottom: 3vw;
   font-weight: 500;
   letter-spacing: 0.5px;
+  text-align: justify;
 }
 
 .clientTestimonialSectionContent{
@@ -555,7 +556,7 @@
 
 .websiteDesignSection .leftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
   color: #1a1a1a;
 }
