--- a/styles/dmtca.module.css
+++ b/styles/dmtca.module.css
@@ -140,7 +140,7 @@
 
 .thirdSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
 }
@@ -190,7 +190,7 @@
 
 .forthSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
   padding-top: 8vw;
@@ -446,8 +446,8 @@
 }
 
 .colorBoxesSection {
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -464,49 +464,70 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  position: relative;
 }
 
 .colorBoxesSection ul li {
-  padding-bottom: 1vw;
-  padding-left: 1vw;
   list-style: none;
   color: #fff;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
-  font-size: 0.8vw;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2vw;
   line-height: 1.5;
 }
 
 .colorOne {
-  width: 100%;
-  height: 210px;
-  background: transparent linear-gradient(90deg, #1f56f9 0%, #1f56f9 100%) 0% 0%
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    background: #56b7be;
+    z-index: 1;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+  }
+
+  .colorTwo {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 1;
+    background: #4feab8;
+    position: absolute;
+    left: 13vw;
+  }
+
+  .colorThree {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 1;
+    background: #33b5f2;
+    position: absolute;
+    left: 26vw;
+  }
+
+  .colorFour {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 1;
+    background: #62ccfd;
+    position: absolute;
+    left: 39vw;
+  }
+
+  .colorFive {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 1;
+     background: transparent linear-gradient(90deg, #4feab8 0%, #62ccfd 100%) 0% 0%
     no-repeat padding-box;
-  z-index: 1;
-  transform-origin: left center;
-}
-
-.colorTwo {
-  width: 90%;
-  height: 160px;
-  z-index: 1;
-  background: #ec374d;
-}
-
-.colorThree {
-  width: 80%;
-  height: 110px;
-  z-index: 1;
-  background: #013c9f;
-}
-
-.colorFour {
-  width: 70%;
-  height: 80px;
-  z-index: 1;
-  background: #f9bc40;
-}
+    position: absolute;
+    left: 52vw;
+  }
 
 .videoHeading {
   width: 90%;
@@ -551,7 +572,7 @@
 
 .websiteDesignSection .leftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
   color: #1a1a1a;
 }
