--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5289,7 +5289,7 @@ body.loading {
 .main-blog-container {
   width: 90%;
   margin: 0 auto;
-  padding-top: 12vw;
+  padding-top: 7vw;
   display: flex;
   justify-content: space-between;
 }
@@ -5298,19 +5298,24 @@ body.loading {
   margin-bottom: 2vw;
 }
 
+
+.blog-img-container{
+  width: 100%;
+}
+
 .main-blog-container .left-section {
   width: 20%;
 }
 
 .main-blog-container .left-section h1 {
-  font-size: 1.6vw;
+  font-size: 1.4vw;
   font-weight: 500;
   color: #1a1a1a;
   text-transform: uppercase;
 }
 
 .main-blog-container .left-section h2 {
-  font-size: 1.6vw;
+  font-size: 1.4vw;
   color: #1a1a1a;
   font-weight: 500;
   text-transform: uppercase;
@@ -5323,8 +5328,9 @@ body.loading {
 .main-blog-container .right-section p {
   font-size: 1.2vw;
   font-weight: 400;
-  color: #8c8c8c;
+  color: #222222;
   font-family: 'Ageo';
+  text-align: justify;
 }
 
 .strong {
@@ -5334,15 +5340,19 @@ body.loading {
   border-left: 3px solid #1a1a1a;
   padding-left: 3vw;
   padding-right: 5vw;
+  text-align: left;
+  font-family: 'Ageo';
 }
 
 .donald {
   font-size: 1.8vw;
   color: #1a1a1a;
+  font-weight: 600;
   margin-left: 3.2vw;
 }
 
 .bold {
+  font-weight: 600;
   color: #1a1a1a;
 }
 
@@ -5358,7 +5368,13 @@ body.loading {
 }
 
 .blog-img .image-container img {
-  height: 140%;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  right: 0;
+  top: 0;
+  left: 0;
+  object-fit: cover;
 }
 
 .related-articles {
