--- a/styles/quick.module.css
+++ b/styles/quick.module.css
@@ -124,7 +124,7 @@
 
 .thirdSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
 }
@@ -187,7 +187,7 @@
 
 .forthSectionLeftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   color: #1a1a1a;
   text-transform: uppercase;
   padding-top: 8vw;
@@ -449,6 +449,8 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  display: grid;
+  grid-template-columns: 34% 28% 21% 17%;
 }
 
 .colorBoxesSection ul li {
@@ -474,7 +476,7 @@
 }
 
 .colorTwo {
-  width: 90%;
+  width: 100%;
   height: 160px;
   z-index: 1;
   background: transparent linear-gradient(314deg, #00050d 0%, #10064c 100%) 0%
@@ -482,14 +484,14 @@
 }
 
 .colorThree {
-  width: 80%;
+  width: 100%;
   height: 110px;
   z-index: 1;
   background: #841aff;
 }
 
 .colorFour {
-  width: 70%;
+  width: 100%;
   height: 80px;
   z-index: 1;
   background: #16171d;
@@ -538,7 +540,7 @@
 
 .websiteDesignSection .leftBox h1 {
   font-size: 1.4vw;
-  font-weight: 500;
+  font-weight: 600;
   text-transform: uppercase;
   color: #1a1a1a;
 }
