--- a/styles/wragby.module.css
+++ b/styles/wragby.module.css
@@ -140,7 +140,7 @@
 
   .thirdSectionLeftBox h1 {
     font-size: 1.4vw;
-    font-weight: 500;
+    font-weight: 600;
     color: #1a1a1a;
     text-transform: uppercase;
   }
@@ -189,7 +189,7 @@
 
   .forthSectionLeftBox h1 {
     font-size: 1.4vw;
-    font-weight: 500;
+    font-weight: 600;
     color: #1a1a1a;
     text-transform: uppercase;
     padding-top: 8vw;
@@ -443,8 +443,8 @@
   }
 
   .colorBoxesSection {
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -461,48 +461,80 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    position: relative;
   }
 
   .colorBoxesSection ul li {
-    padding-bottom: 1vw;
-    padding-left: 1vw;
     list-style: none;
     color: #fff;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    font-size: 0.8vw;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7vw;
     line-height: 1.5;
+    font-weight: 500;
+    font-family: 'Gilroy';
+    box-shadow: 2px 2px 25px #1a1a1a;
+    text-align: center;
+  }
+
+  .colorBoxesSection ul li:nth-child(3){
+    color: #1a1a1a;
+  }
+
+  .colorBoxesSection ul li:nth-child(4){
+    color: #1a1a1a;
   }
 
   .colorOne {
-    width: 100%;
-    height: 210px;
-    background: transparent linear-gradient(90deg, #1f56f9 0%, #1f56f9 100%) 0% 0%
-      no-repeat padding-box;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    background: #E30B25;
     z-index: 1;
-    transform-origin: left center;
+    display: inline-block;
+    position: absolute;
+    left: 0;
   }
 
   .colorTwo {
-    width: 90%;
-    height: 160px;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
     z-index: 1;
-    background: #ec374d;
+    background: #2C5ED1;
+    position: absolute;
+    left: 13vw;
   }
 
   .colorThree {
-    width: 80%;
-    height: 110px;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
     z-index: 1;
-    background: #013c9f;
+    background: #FFFFFF;
+    position: absolute;
+    left: 26vw;
   }
 
   .colorFour {
-    width: 70%;
-    height: 80px;
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
     z-index: 1;
-    background: #f9bc40;
+    background: #E7EDEF;
+    position: absolute;
+    left: 39vw;
+  }
+
+  .colorFive {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    z-index: 1;
+    background: #151515;
+    position: absolute;
+    left: 52vw;
   }
 
   .videoHeading {
@@ -548,7 +580,7 @@
 
   .websiteDesignSection .leftBox h1 {
     font-size: 1.4vw;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     color: #1a1a1a;
   }
