--- a/styles/dharan.module.css
+++ b/styles/dharan.module.css
@@ -1068,6 +1068,7 @@
   }
 
   .imageContainer img {
+    height: 110%;
     object-fit: cover;
   }
 
@@ -1186,6 +1187,15 @@
     font-size: 3.8vw;
   }
 
+  .clientTestimonialSectionLeftBox h1 {
+    font-size: 5vw;
+}
+
+  .clientTestimonialparaTop h1{
+    font-size: 3.8vw;
+    padding-bottom: 5vh;
+  }
+
   .desktopSlider {
     display: none;
   }
@@ -1210,7 +1220,7 @@
   }
 
   .nextTitle {
-    margin-right: 26vw;
+    margin-right: 4vw;
     text-align: left;
   }
 
@@ -1224,7 +1234,7 @@
   }
 
   .nextProjectHeading {
-    width: 56%;
+    width: 30%;
     text-align: center;
   }
 
