--- a/styles/dmtca.module.css
+++ b/styles/dmtca.module.css
@@ -1010,6 +1010,48 @@
 
   .patronumForthSection {
     height: auto;
+  
+  }
+
+  .colorBoxesSection{
+    width: 90%;
+  }
+
+  .colorBoxesSection ul{
+    align-items: center;
+  }
+
+  .colorBoxesSection ul li{
+    font-size: 2.7vw;
+  }
+
+  .colorOne{
+    width: 85px;
+    height: 85px;
+  }
+
+  .colorTwo{
+    width: 85px;
+    height: 85px;
+    left: 17vw;
+  }
+
+  .colorThree{
+    width: 85px;
+    height: 85px;
+    left: 34vw;
+  }
+
+  .colorFour{
+    width: 85px;
+    height: 85px;
+    left: 51vw;
+  }
+
+  .colorFive{
+    width: 85px;
+    height: 85px;
+    left: 68vw;
   }
 
   .forthSectionContent {
@@ -1146,7 +1188,7 @@
 
   .colorBoxesSection {
     justify-content: flex-start;
-    height: 25vh;
+    height: 30vh;
   }
 
   .colorBox {
