--- a/styles/workProject.module.css
+++ b/styles/workProject.module.css
@@ -77,13 +77,11 @@
 }
 
 .glideContent img {
-  width: 130%;
-  height: auto;
+  width: 100%;
+  height: 110%;
   position: absolute;
-  top: -10%;
+  top: -15%;
   left: 0;
-  bottom: 0;
-  right: 0;
   object-fit: cover;
   object-position: center;
 }
@@ -204,10 +202,6 @@
     height: 85vh;
   }
 
-  .glideContent img {
-    top: -10%;
-    width: 120%;
-  }
 }
 
 @media screen and (max-width: 1440px) {
